Fix stretch image with class "featured-image" by rules:  - object fit  - object position Add combinator .profile img to declare rule width

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -33,5 +33,10 @@ nav a:hover {
 .featured-image {
 	width: 100%;
 	max-height: 300px;
+	object-fit: cover;
+	object-position: center;
 }
 
+.profile img {
+	width: 200px;
+}
